# money-mastery-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml  requirements.txt
controllers/: conta.py
core/: configs.py  database.py
models/: emprestimo_model.py  entrada_model.py  gasto_base_model.py  reserva_model.py  saida_model.py
money_mastery/: main.py  teste_db.py
money_mastery/auth/: crypt.py  jwt_handler.py  service.py
money_mastery/controllers/: __init__.py  conta.py  deps.py
money_mastery/controllers/v1/: __init__.py  conta.py  entrada.py  login.py  saida.py  user.py
money_mastery/core/: configs.py  database.py  deps.py
money_mastery/models/: conta_model.py  emprestimo_model.py  entrada_model.py  gasto_base_model.py  lembrete_model.py  meta_model.py  reserva_model.py  saida_model.py
money_mastery/repository/: conta_repo.py
money_mastery/schemas/: conta_schema.py  entrada_schema.py  gasto_base_schema.py  lembrete_schema.py  reserva_schema.py  saida_schema.py
repository/: conta_repo.py
scripts/: docker-compose-start.sh  logs-docker.sh  run-tests-in-docker.sh
tests/: conftest.py  test_conta.py  test_entrada.py  test_gasto_base.py  test_lembrete.py  test_main.py  test_reserva.py  test_saida.py
